# DizzySync

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  build.rs  clippy.toml  config.example.toml  docker-compose.yml  readme.template.md  rustfmt.toml
.github/workflows/: ci.yml
src/: api_control.rs  archive.rs  client.rs  config.rs  downloader.rs  local_state.rs  main.rs  metadata.rs  types.rs
src/client/: api.rs  auth.rs  mod.rs  web.rs
src/downloader/: mod.rs  tracks.rs  web.rs
web/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  Providers.tsx  api.ts  i18n.tsx  main.tsx  styles.css  types.ts
web/src/components/: AlbumDetailDrawer.tsx  AlbumTable.tsx  ConfigForm.tsx  ConfigGuide.tsx  GlobalAudioPlayer.tsx  LogViewer.tsx  StatusCard.tsx  SyncControls.tsx
