[package]
name = "dizzysync"
version = "0.1.0"
edition = "2021"
description = "Dizzylab自动同步器"
authors = ["去离子水 <ovlertheyoung@gmail.com>"]

[dependencies]
# HTTP客户端
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "form", "rustls"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化和配置解析
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 文件处理
zip = "8"
unrar = "0.5"
encoding_rs = "0.8"
filetime = "0.2"

# HTML解析
scraper = "0.25"

# 正则表达式
regex = "1.10"

# 路径处理
path-clean = "1.0"

# 命令行界面
clap = { version = "4.0", features = ["derive"] }

# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }

# MD5 校验（封面去重）
md5 = "0.8"

# 音频元数据写入
id3 = "1"
metaflac = "0.2"
